apply repo list flow

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/githubRepositoryListFragment"
-        android:name="com.example.sampleproject.presentation.ui.GithubRepositoryListFragment"
+        android:name="com.example.sampleproject.presentation.repositorylist.GithubRepositoryListFragment"
         android:label="github_repository_list_fragment"
         tools:layout="@layout/github_repository_list_fragment" />
 </navigation>
