--- a/app/src/main/res/layout/item_github_repository.xml
+++ b/app/src/main/res/layout/item_github_repository.xml
@@ -6,6 +6,7 @@
     android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/cvRepoItem"
         android:layout_width="match_parent"
         android:layout_height="150dp"
         app:layout_constraintBottom_toBottomOf="parent"
