--- a/app/src/main/res/layout/github_repository_detail_fragment.xml
+++ b/app/src/main/res/layout/github_repository_detail_fragment.xml
@@ -9,7 +9,7 @@
     <ProgressBar
         android:id="@+id/progressBar"
         style="?android:attr/progressBarStyle"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -98,5 +98,4 @@
         app:layout_constraintStart_toEndOf="@+id/tvStarCount"
         app:layout_constraintTop_toTopOf="@+id/textView2"
         app:layout_constraintVertical_bias="0.0" />
-
 </androidx.constraintlayout.widget.ConstraintLayout>
